# matrioska

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  matrioska_v1.ipynb  matrioska_v1.py  matrioska_v2.ipynb  matrioska_v2.py  pyproject.toml  requirements.txt  run.py
benchmarks/harness/: conftest_template.py  evaluator.py  poc.py  runner.py
benchmarks/harness/wrappers/: aider_wrapper.py  direct.py  direct_plan.py  gpt_engineer_wrapper.py  matrioska_wrapper.py
benchmarks/results/poc/: evaluations.json
benchmarks/tasks/: loader.py
benchmarks/tasks/api_auth/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/api_books/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/cli_pipeline/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/cli_todo/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/config_docker/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/data_stats/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/fullstack_todo/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/web_dashboard/: CONTRACT  meta.json  prompt.md
benchmarks/tasks/web_landing/: CONTRACT  meta.json  prompt.md
matrioska_work/: MATRIOSKA.md
results/sample_1/: config.md  model-matrioska-log.txt  model-only.txt  prompt.txt
src/matrioska/: __init__.py  api.py  hooks.py
src/matrioska/agents/: __init__.py  architect.py  generator.py  judge.py  multi_planner.py  (+4 more)
tests/: test_arun.py  test_cli_dx.py  test_costing.py  test_custom_commands.py  test_dspy_compiler.py  test_hooks.py  test_imports.py  test_mcp_vault_descriptors.py  test_metrics_regression.py  test_multi_planner.py  test_new_features.py  test_repl.py  test_repl_autocomplete.py  test_sandbox.py  test_vault.py  test_vault_repl.py
(+45 files in other folders)
